# opengl-crossplatform

./: CMakeLists.txt  README.md
runtime/shaders/: shader.frag  shader.vert
src/: main.cpp
src/includes/: shader.h
src/rendering/: shader.cpp
